@@ -3,6 +3,9 @@ Package: PSCBS
 ==============
 
 Version: 0.16.3 [2011-11-17]
+o Adjusted segmentByCBS() such that it can handle 'knownSegments'
+  with chromosome boundaries given as -Inf and +Inf.
+o Now argument 'mar' for plotTracks() defaults to NULL.
 o BUG FIX: extractSegments() for CBS would throw an error when
   there were multiple chromosomes.
 
